--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "guzzlehttp/guzzle": "^6.5.5",
         "illuminate/http": "^8.0",
         "laminas/laminas-text": "^2.7",
-        "laravel-zero/framework": "^8.0"
+        "laravel-zero/framework": "^8.0",
+        "nunomaduro/laravel-desktop-notifier": "^2.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
