--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 | ^8.0",
         "guzzlehttp/guzzle": "^6.5.5",
         "illuminate/http": "^8.0",
         "intonate/tinker-zero": "^1.1",
